Refactor: Apply clean code, clean architecture, and security best practices
Major code quality improvements following SOLID principles and enterprise patterns:

## Clean Code Improvements

**Constants Classes** (Eliminate Magic Strings/Numbers):
- ApiConstants: API paths, parameters, headers, messages
- ValidationConstants: Validation rules, lengths, error messages
- SecurityConstants: JWT claims, roles, CORS settings, public endpoints
- ErrorConstants: Centralized error messages with format strings
- DatabaseConstants: Table/column names, indexes, constraints

**Input Sanitization & Validation**:
- Added OWASP Java HTML Sanitizer for XSS prevention
- Added Apache Commons Text for additional sanitization
- Created SanitizationUtil: HTML removal, URL validation, text normalization
- Created ValidationUtil: URL pattern validation, dangerous content detection
- Created @Sanitized annotation for declarative validation
- Implemented RequestSanitizationInterceptor for automatic sanitization
- Enhanced all DTOs with @Sanitized annotations

**Configuration Improvements**:
- Converted application.properties → application.yaml
- Structured YAML with clear sections and comments
- Added dev/prod profiles with appropriate logging levels
- Added Hikari connection pool configuration
- Added server compression and error handling settings
- Improved Eureka configuration with health probes
- Added Actuator metrics and Prometheus support

## Clean Architecture

**Package Structure**:
- common/constants: All constants organized by domain
- common/util: Reusable utilities (sanitization, validation)
- config: Configuration classes with proper documentation
- validation: Custom validators and annotations

**Separation of Concerns**:
- Controller: HTTP handling + sanitization
- Service: Business logic only
- Repository: Data access only
- Mapper: Entity ↔ DTO transformation
- Utilities: Cross-cutting concerns

**Code Documentation**:
- Added comprehensive Javadoc for all public classes
- C